1.58v

1. Arhchive module for chats. Now we have unlimited number of chats support. I'm talking about tens of millions of records. If main table becames to big you can just archive the old chats.
This feature took over 20 hours to implement.
2. Indonesian language.
3. Delay for canned messages.

execute doc/update_db/update_41.sql

1.57v

1. Option to configure default map position.
2. Departments transfer workflow will pay attention to how many pending chat's there are.
3. Firefox support for notification added.
4. Desktop client will support user typing messages. User status will be shown.

Bugfixes

execute doc/update_db/update_40.sql

1.56v

Features:
1. Automatic transfers between departments.
2. Cronjobs support

Bugfixes:
After upgrade for third parties cookies drop, identifier functionality was lost.

Visit the site for more information how to use these features.

execute doc/update_db/update_39.sql

1.55v

Features:
1. Total pageviews tracking - pageviews during all the visits
2. Visits counting.
3. Option to set, after how many hours pro active chat message should be shown again.
4. Previous users chats in chat tab window.
5. How many times proactive chat message logic was applied counter.
6. User browsing information in chat window.
7. Colors for install step 1

Bugfix:
1. Footpath was stopped tracking if user was having a chat in chatwidget.
2. Online users were tracked even if online users tracking was disabled.
3. There was a bug which coused double time for online user if checking for messages from operator was enabled. Also now we do not update database within each check for message.

execute doc/update_db/update_38.sql

1.54v

Features:
1. Option to turn off or on Resume chat functionality.
2. Reopen chat permission in back office.
3. If chat is closed operator won't be able to send messages untill it's reopened. What user reopened the chat also is logged.

Bugfixes:
1. Footprint was not detected if chat was started from proactive chat message.