@@ -32,13 +32,15 @@
             <?php } ?>
          <?php endif; $lastMessageID = $msg['id']; endforeach; ?>
        </div>
-       <div id="id-operator-typing">
-            <i><?php echo erTranslationClassLhTranslation::getInstance()->getTranslation('chat/chat','Operator is typing now...')?></i>
-       </div>
+
     </div>
 
     <div class="pt5" id="ChatMessageContainer">
+
         <textarea rows="4" name="ChatMessage" placeholder="<?php echo erTranslationClassLhTranslation::getInstance()->getTranslation('chat/chat','Enter your message')?>" id="CSChatMessage" ></textarea>
+        <div id="id-operator-typing">
+	            <i><?php echo erTranslationClassLhTranslation::getInstance()->getTranslation('chat/chat','Operator is typing now...')?></i>
+	    </div>
         <script type="text/javascript">
         jQuery('#CSChatMessage').bind('keyup', 'return', function (evt){
             lhinst.addmsguser();
